--- a/aula daw/index.html
+++ b/aula daw/index.html
@@ -1,68 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style type="text-css"></style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula</title>
+    <title>aula</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section>
-        <form action="">
-            <fieldset>
-                    <legend>Meu formulário</legend>
-                    <label for="name">Nome</label>
-                    <input type="text" required name="name" placeholder="Preencha seu nome">
-                    <br>
+    <h1 style="color: red;">teste</h1>
+    
+    <h2 style="color: cadetblue;">teste</h2>
 
-                    <label for="sobrenome">Sobrenome</label>
-                    <input type="text" required name="Sobrenome" placeholder="Preencha seu sobrenome">
+    <h3 style="color: chartreuse;">teste</h3>
 
-                    <br>
+    <h4>teste</h4>
 
-                    
-                    <label for="e-mail">E-mail:</label>
-                    <input type="email" required name="email" id="e-mail" placeholder="Preencha seu sobrenome">
+    <h5>teste</h5>
 
-
-
-
-
-                    <!--Placeholder = "Mesnsagens dentro do container de entreda"-->
-                    <br>
-                    <label for="vaga">Vaga</label><br>
-                    <input type="radio" value="presencial" name="vaga">presencial<br>
-                    <input type="radio" value="remoto" name="vaga">Remoto<br>
-
-                    <p>
-
-                        <label for="hobbies:">Hobbies:</label><br>
-                        <input type="checkbox" name="hobbies" value="mergulhar">Mergulhar<br>
-                        <input type="checkbox" name="hobbies" value="game">Game<br>
-                        <input type="checkbox" name="hobbies" value="LUta">Luta<br>
-                    </p>
-
-                    <br>
-
-                    <label for="cidades">Cidades:</label>
-                    <select name="select">
-                            <option>Porto Alegre</option>
-                            <option>Florianópolis</option>
-                            <option selected>Curitiba</option>
-                            <option>São Paulo</option>
-                            <option>Rio de Janeiro</option>
-                    </select>
-
-                    <br><br>
-
-
-                    <label for="observacoes">Observações</label>
-                    <textarea name="observacoes"></textarea>
-
-                    <button type="submit">Enviar</button>
-
-                    <button type="reset">LImpar</button>
-             </fieldset>
-        </form>
-</section>
+    <h6>teste</h6>
 </body>
 </html>
