--- a/aula daw/index.html
+++ b/aula daw/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <style type="text-css"></style>
+    <style>
+        .p{
+            padding-top: 30px;
+            padding-right: 30px;
+            padding-bottom: 30px;
+            padding-left: 30px;
+
+            border-style: dashed;
+            border-width: 2px;
+            border-color: red;
+
+            margin: 50px 50px 50px 50px;
+            color: darkred;
+        }
+
+        .h4{
+            color: blueviolet;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>aula</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>aula 23-10</title>
 </head>
+
 <body>
-    <h1 style="color: red;">teste</h1>
-    
-    <h2 style="color: cadetblue;">teste</h2>
-
-    <h3 style="color: chartreuse;">teste</h3>
-
-    <h4>teste</h4>
-
-    <h5>teste</h5>
-
-    <h6>teste</h6>
+    <p class="p">Primeiro parágrafo</p>
+  
+    <h4>Frase</h4>
 </body>
+
 </html>
